--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="css/index.css" rel="stylesheet">
 
   <script src="js/index.js" async></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -54,8 +54,7 @@
         <h2>Adventure Awaits</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
-      </div>
-     
+      </div>  
     </section>
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
@@ -63,7 +62,6 @@
       <img src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
-
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
